- added view_var('body', view_render(array('view_header', 'view_welcome', 'view_footer'), $data)); function
- added '.' outside folder load support view_var('body', view_render(array('.view_header', 'view_welcome', '.view_footer'), $data)) 
- added sub folder load support to loader::lib() and loader::app_lib('folder/sub/filename'); functions.
//-----------------------------------------------------------------------------

!!!!!!!!!!!!!!!!!!! NEW TODOS !!!!!!!!!!!!!!!

@todo .. add to userguide 
view_var('body', view_render(array('view_header', 'view_welcome', 'view_footer'), $data));
"." outside folder (view_app func.) load support.
view_var('body', view_render(array('.view_header', 'view_welcome', '.view_footer'), $data));

@todo .. add to user guide php5 method chaining support like this 
echo agent::instance()
->init()
->browser();

echo calendar::instance()
->init()
->generate(2006, 10);

@todo .. add sub loader library support .. loader::app_lib('captcha/securimage');
@todo .. look log_message(); some functions does not work.
@todo .. Add Form_controller (Global) tutorial to user guide .. create a directory called /forms
then create a Form_controller to /parents folder. add common functions to Form controller.
@todo .. add user guide to extending to Core MY_model functionality.
it works in Obullo !
http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it-your-own.html 
(CJ Lazell advices)

@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. Global controllers pattern extends rules, add to userguide..!!!
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. look at globally set database object from app_controller.
@todo .. change obullo mvc2 names as Obullo GC in web site.            
@todo .. add to GC Map (application flow chart) to web site.                                       
@todo .. session database sql SET userdata field CHARACTER as utf8 into user_guide