@@ -24,7 +24,7 @@ $database['system']['active_record'] = TRUE;
 $database['db']['hostname'] = "localhost";
 $database['db']['username'] = "root";
 $database['db']['password'] = "";
-$database['db']['database'] = "example_db";
+$database['db']['database'] = "obullo";
 $database['db']['dbdriver'] = "mysql";
 $database['db']['dbh_port'] = "";
 $database['db']['char_set'] = "utf8";
@@ -37,7 +37,7 @@ $database['db']['options']  = array();  // Example:  array( PDO::ATTR_PERSISTENT
 $database['db2']['hostname'] = "localhost";
 $database['db2']['username'] = "root";
 $database['db2']['password'] = "";
-$database['db2']['database'] = "cdcol";
+$database['db2']['database'] = "";
 $database['db2']['dbdriver'] = "mysql";
 $database['db2']['dbh_port'] = "";
 $database['db2']['char_set'] = "utf8";
