@@ -9,6 +9,7 @@ defined('BASE') or exit('Access Denied!');
 * @author      Ersin Guvenc.
 * @version     0.1
 * @version     0.2 added extend support
+* @version     0.3 added config_item('sess_die_cookie') and sess() func.
 */
 if( ! function_exists('_sess_start') ) 
 {
@@ -49,8 +50,7 @@ if( ! function_exists('_sess_start') )
         {
             if( ! isset($ob->db) || ! $ob->db instanceof OB_DB) 
             {
-                throw new SessionException('Session helper works with database so 
-                    first you must load a database object by loader::database() function.');
+                loader::database();
             }
             
             $ses->_sion->sess_db = &$ob->db;
@@ -419,6 +419,22 @@ if( ! function_exists('sess_get') )
 // --------------------------------------------------------------------
 
 /**
+* Alias of sess_get(); function.
+*
+* @access   public
+* @param    string
+* @return   string
+*/
+if( ! function_exists('sess') ) 
+{
+    function sess($item)
+    {
+        return sess_get($item);
+    }
+}
+// --------------------------------------------------------------------
+
+/**
 * Fetch all session data
 *
 * @access    public
@@ -474,7 +490,7 @@ if( ! function_exists('sess_set') )
 */
 if( ! function_exists('sess_unset') ) 
 {
-    function sess_unset($newdata = array())  // obullo changes ...
+    function sess_unset($newdata = array())  // ( obullo changes ... )
     {
         $ses = Ssc::instance();
         
@@ -507,7 +523,7 @@ if( ! function_exists('sess_unset') )
 */
 if( ! function_exists('sess_set_flash') ) 
 {
-    function sess_set_flash($newdata = array(), $newval = '') // obullo changes ...
+    function sess_set_flash($newdata = array(), $newval = '') // ( obullo changes ...)
     {
         $ses = Ssc::instance();
         
@@ -537,7 +553,7 @@ if( ! function_exists('sess_set_flash') )
 */
 if( ! function_exists('sess_keep_flash') ) 
 {
-    function sess_keep_flash($key) // obullo changes ...
+    function sess_keep_flash($key) // ( obullo changes ...)
     {
         $ses = Ssc::instance();
         // 'old' flashdata gets removed.  Here we mark all 
@@ -568,7 +584,7 @@ if( ! function_exists('sess_keep_flash') )
 */
 if( ! function_exists('sess_get_flash') ) 
 {
-    function sess_get_flash($key, $prefix = '', $suffix = '')  // obullo changes ...
+    function sess_get_flash($key, $prefix = '', $suffix = '')  // ( obullo changes ...)
     {
         $ses = Ssc::instance();
         $flashdata_key = $ses->_sion->flashdata_key.':old:'.$key;
@@ -697,11 +713,14 @@ if( ! function_exists('_set_cookie') )
             $cookie_data = $cookie_data . md5($cookie_data . $ses->_sion->encryption_key);
         }
         
+        // ( Obullo Changes .. set cookie life time 0 )
+        $expiration = (config_item('sess_die_cookie')) ? 0 : $ses->_sion->sess_expiration + time();
+        
         // Set the cookie
         setcookie(
                     $ses->_sion->sess_cookie_name,
                     $cookie_data,
-                    $ses->_sion->sess_expiration + time(),
+                    $expiration,
                     $ses->_sion->cookie_path,
                     $ses->_sion->cookie_domain,
                     0
